--- a/public/css/admin/setting-programs.css
+++ b/public/css/admin/setting-programs.css
@@ -1,133 +1,165 @@
 * {
-  margin: 0;
-  padding: 0;
-  font-family: var(--font-poppins);
-  text-decoration: none !important;
+    margin: 0;
+    padding: 0;
+    font-family: var(--font-poppins);
+    text-decoration: none !important;
 }
 body {
-  background: linear-gradient(0deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.95)), #2785DD;
-  height: 100%;
+    background: linear-gradient(
+            0deg,
+            rgba(255, 255, 255, 0.95),
+            rgba(255, 255, 255, 0.95)
+        ),
+        #2785dd;
+    height: 100%;
 }
 
 .main {
-  height: 100%;
-  margin: 0;
+    height: 100%;
+    margin: 0;
 }
 .sidenav {
-  background-color: var(--white);
-  border-right: 1px solid rgba(39, 133, 221, 0.1);  
+    background-color: var(--white);
+    border-right: 1px solid rgba(39, 133, 221, 0.1);
 }
 .sidenav * {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 /* Popup */
 .popup-menu {
-  background-color: var(--white);
-  position: absolute;
-  left: 17.5%;
-  box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
-  border-radius: 6px;
-  z-index: 10;
+    background-color: var(--white);
+    position: absolute;
+    left: 17.5%;
+    box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
+    border-radius: 6px;
+    z-index: 10;
 }
 .menuList a {
-  color: var(--black);
+    color: var(--black);
 }
 .img-logo {
-  width: 110px;
+    width: 110px;
 }
 .smallLine {
-  color: var(--blue);
-  width: 40%;
-  border-width: 3px;
-  border-radius: 20px;
+    color: var(--blue);
+    width: 40%;
+    border-width: 3px;
+    border-radius: 20px;
 }
 .head {
-  background-color: var(--white);
+    background-color: var(--white);
 }
 .head * {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 .head-content img {
-  width: auto;
-  height: 16px;
+    width: auto;
+    height: 16px;
 }
 .head-content h6 {
-  color: var(--grey);
-  font-size: 14px;
-  font-weight: 400;
+    color: var(--grey);
+    font-size: 14px;
+    font-weight: 400;
 }
 .menuList img {
-  width: auto;
-  height: 25px;
+    width: auto;
+    height: 25px;
 }
 .menu {
-  font-size: 14px;
-  font-weight: 400;
+    font-size: 14px;
+    font-weight: 400;
 }
 .active {
-  color: var(--blue);
-  filter: brightness(100%);
+    color: var(--blue);
+    filter: brightness(100%);
 }
 .non-active {
-  color: var(--black);
-  filter: brightness(0%);
+    color: var(--black);
+    filter: brightness(0%);
 }
 
 .main-content {
-  padding: 20px !important;
+    padding: 20px !important;
 }
 .studentList {
-  color: var(--blue);
-  min-height: 450px;
-  background-color: var(--white);
-  border-radius: 6px;
-  box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
+    color: var(--blue);
+    min-height: 450px;
+    background-color: var(--white);
+    border-radius: 6px;
+    box-shadow: 0px 2px 10px rgba(58, 53, 65, 0.1);
 }
 .studentList * {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 .headline {
-  color: var(--white);
-  padding: 20px 24px !important;
-  background-color: var(--blue);
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
+    color: var(--white);
+    padding: 20px 24px !important;
+    background-color: var(--blue);
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
 }
 .headline h6 {
-  font-size: 14px;
+    font-size: 14px;
 }
 .headline img {
-  width: auto;
-  height: 25px;
-  filter: invert(100%);
+    width: auto;
+    height: 25px;
+    filter: invert(100%);
 }
 .headline input.inputField {
-  font-size: 12px;
-  padding: 20px;
+    font-size: 12px;
+    padding: 20px;
 }
 .table thead {
-  background-color: #F9FAFC;
-  text-transform: uppercase;
+    background-color: #f9fafc;
+    text-transform: uppercase;
 }
 .table tr {
-  color: rgba(58, 53, 65, 0.87);
-  font-size: 11px;
+    color: rgba(58, 53, 65, 0.87);
+    font-size: 11px;
 }
 .table tbody tr:hover {
-  background-color: rgba(234, 234, 234, 0.4);
-  cursor: pointer;
+    background-color: rgba(234, 234, 234, 0.4);
+    cursor: pointer;
 }
-.table th,
+/* .table th,
 .table td {
   padding: 14px 8px !important;
   text-align: center;
   vertical-align: middle;
+} */
+
+.dataTables_wrapper {
+    color: var(--black);
+}
+.dataTables_wrapper .form-control:focus,
+.dataTables_wrapper .form-select:focus {
+    box-shadow: none;
+}
+.dataTables_wrapper .dataTables_length,
+.dataTables_wrapper .dataTables_filter,
+.dataTables_filter .form-control,
+.dataTables_wrapper .dataTables_info {
+    font-size: 13px;
+}
+.dataTables_wrapper .form-select {
+    width: 50% !important;
+    padding-left: 12px !important;
+}
+.dataTables_wrapper .page-item {
+    padding: 0 !important;
+    margin: 0 !important;
+    border: none !important;
+    background: none !important;
+}
+.dataTable tbody td {
+    padding: 14px 10px !important;
 }
 .table td.desc {
-  text-align: start;
+    text-align: start;
 }
 /* .table .status-editor {
   color: var(--white);
@@ -138,78 +170,84 @@ body {
 } */
 
 .footer {
-  color: var(--white);
-  background: var(--blue);
-  position: relative;
-  bottom: 0;
-  left: 0;
+    color: var(--white);
+    background: var(--blue);
+    position: relative;
+    bottom: 0;
+    left: 0;
 }
 .footer * {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 .footer p {
-  padding: 0 !important;
-  font-size: 12px;
+    padding: 0 !important;
+    font-size: 12px;
 }
 
 /* Logout */
 .modal-dialog {
-  margin-top: 5px;
+    margin-top: 5px;
 }
 .modal-header {
-  background-color: var(--blue);
-  padding: 24px !important;
+    background-color: var(--blue);
+    padding: 24px !important;
 }
 .modal-header img {
-  width: auto;
-  height: 22px;
-  filter: invert(100%);
+    width: auto;
+    height: 22px;
+    filter: invert(100%);
 }
 .modal-header h6 {
-  color: var(--white);
-  font-size: 14px;
-  line-height: 14px;
+    color: var(--white);
+    font-size: 14px;
+    line-height: 14px;
 }
-.modal-body p, .modal-footer button {
-  font-size: 13px;
-  margin: 0;
+.modal-body p,
+.modal-footer button {
+    font-size: 13px;
+    margin: 0;
 }
 .modal-footer button,
 .modal-footer button:hover {
-  background-color: var(--yellow);
-  color: var(--white);
-  padding: 10px 25px;
-  border: 0;
-  border-radius: 10px;
+    background-color: var(--yellow);
+    color: var(--white);
+    padding: 10px 25px;
+    border: 0;
+    border-radius: 10px;
 }
 
 @media (max-width: 992px) {
 }
 
 @media (max-width: 768px) {
-  .menuList img {
-    height: 20px;
-  }
-  .main {
-    min-height: 850px;
-  }
-  .main-content {
-    padding: 10px !important;
-  }
-  .head h4 {
-    font-size: 18px;
-  }
-  .headline img {
-    height: 18px;
-  }
+    .menuList img {
+        height: 20px;
+    }
+    .main {
+        min-height: 850px;
+    }
+    .main-content {
+        padding: 10px !important;
+    }
+    .head h4 {
+        font-size: 18px;
+    }
+    .headline img {
+        height: 18px;
+    }
 
-  /* Table */
-  .table tr {
-    font-size: 8px;
-  }
-  
-  .footer p {
-    font-size: 10px;
-  }
+    /* Table */
+    .table tr {
+        font-size: 8px;
+    }
+    .dataTables_wrapper .dataTables_length,
+    .dataTables_wrapper .dataTables_filter,
+    .dataTables_filter .form-control,
+    .dataTables_wrapper .dataTables_info {
+        font-size: 13px;
+    }
+    .footer p {
+        font-size: 10px;
+    }
 }
